photo view && start image
Add photo view and auto load start image

--- a/app/src/main/res/layout/toolbar_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_actionbar.xml
@@ -8,4 +8,5 @@
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
     android:background="#3399ff"
+    android:theme="@style/ThemeToolbar"
     app:popupTheme="@style/Zhihu_light" />
