--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,9 +7,19 @@
 
     <style name="Zhihu_light" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="windowActionBar">false</item>
+        <item name="android:actionOverflowButtonStyle">@style/OverFlow</item>
         <!--<item name="android:windowActionBar">@color/theme_light_primary</item>-->
         <!--<item name="android:statusBarColor">@color/theme_light_primary_dark</item>-->
         <!--<item name="android:textColor">@color/theme_light_text_primary_color</item>-->
+    </style>
+
+    <style name="OverFlow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
+        <item name="android:src">@drawable/abc_ic_menu_moreoverflow_mtrl_alpha</item>
+    </style>
+
+
+    <style name="ThemeToolbar" parent="Theme.AppCompat.Light">
+        <item name="android:textColorSecondary">@color/primary_material_light</item>
     </style>
 
 
