--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#fdfcfc</color>
     <color name="foreground_material_light">#fdfdfd</color>
     <color name="primary_text_material_light">#faf8f8</color>
+    <color name="divider_color">#e0e0e0</color>
 </resources>
